--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "lucide": "^0.453.0",
     "lucide-react": "^0.453.0",
