--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.4",
+    "@xyflow/react": "^12.3.2",
+    "framer-motion": "^11.11.9",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "lucide": "^0.453.0",
